--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ site.lang | default: "en-US" }}">
 <head>
-    <title>{{ page.title }}</title>
-    <!-- link to main stylesheet -->
-    <!-- <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
+    <meta charset="UTF-8">
+
+    {% seo %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-    </ul>
-</nav>
-<div class="container">
+<a id="skip-to-content" href="#content">Skip to the content.</a>
 
+<header class="page-header" role="banner">
+    <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+    <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+    {% if site.github.is_project_page %}
+    <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+    {% endif %}
+    {% if site.show_downloads %}
+    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+    {% endif %}
+</header>
+
+<main id="content" class="main-content" role="main">
     {{ content }}
 
-</div><!-- /.container -->
-<footer>
-    <ul>
+    <footer class="site-footer">
         <li><a href="mailto:tim@tkreitner.xyz">email</a></li>
         <li><a href="https://github.com/tabassco">github.com/tabassco</a></li>
-    </ul>
-</footer>
+    </footer>
+</main>
 </body>
 </html>
