--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
 <body>
-<a id="skip-to-content" href="#content">Skip to the content.</a>
 
 <header class="page-header" role="banner">
     <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+    <a href="/" class="btn">Home</a>
+    <a href="/cv" class="btn">CV</a>
+    <a href="/blog" class="btn">Blog</a>
+
     {% if site.github.is_project_page %}
     <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
     {% endif %}
@@ -22,14 +25,15 @@
     <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
     <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
     {% endif %}
+
 </header>
 
 <main id="content" class="main-content" role="main">
     {{ content }}
 
     <footer class="site-footer">
-        <li><a href="mailto:tim@tkreitner.xyz">email</a></li>
-        <li><a href="https://github.com/tabassco">github.com/tabassco</a></li>
+        <li><a href="mailto:tim@tkreitner.xyz">Mail</a></li>
+        <li><a href="https://github.com/tabassco">github</a></li>
     </footer>
 </main>
 </body>
